--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
 			auxMeta = new Cuadro(1000,1000,36,7,"black");
 
 			//imagenes in game
-			murcielago.src = "images/murcielago.PNG";
-			manzana.src = "images/manzana.PNG";
-			naranja.src = "images/naranja.PNG";
-			map.src = "images/map.PNG";
+			murcielago.src = "images/murcielago.png";
+			manzana.src = "images/manzana.png";
+			naranja.src = "images/naranja.png";
+			map.src = "images/map.png";
 
 			//audio in game
 			volar.src = "sounds/volar.mp3";
